# clearflow

./: .env.example  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  GitVersion.yml  MIGRATION.md  README.md  check-examples.sh  continue-session-prompt.md  design-type-transformation.md  llms-full.txt  llms-txt-implementation-guide.md  llms.txt  mcp_server_config.json  message.py  message_flow.py  message_node.py  observer.py  plan.md  pyproject.toml  quality-check.sh  session-context.md
.claude/commands/: continue-session.md  create-plan.md  save-session.md  update-memory.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  pr-check.yml  release-drafter.yml  release.yml  update-llms.yml
clearflow/: __init__.py  callbacks.py  flow.py  message.py  message_flow.py  message_node.py  node.py  observer.py  quality-check.sh  strict_base_model.py  strict_dataclass.py
clearflow/_internal/: callbacks_impl.py  flow_impl.py  message_impl.py  node_impl.py  node_interface.py  strict_base_model_impl.py
docs/: callback-specification.md  creating-examples.md  mcp-integration.md  message-driven-architecture-proposal.md  target-audience.md
examples/: README.md  README_message_driven.md
examples/chat/: README.md  chat_flow.py  main.py  messages.py  nodes.py  pyproject.toml  requirements.txt
examples/chat_message_driven/: __init__.py  chat_flow.py  main.py  messages.py  nodes.py
examples/portfolio_analysis/: .env.example  README.md  config.py  main.py  market_data.py  messages.py  models_pydantic.py  nodes.py  portfolio_flow.py  portfolio_observer.py  pyproject.toml  requirements.txt  signatures.py  validators.py
examples/portfolio_analysis/agents/: __init__.py
examples/portfolio_analysis/agents/compliance/: __init__.py  node.py  signature.py  validators.py
examples/portfolio_analysis/agents/decision/: __init__.py  models.py  node.py  signature.py
examples/portfolio_analysis/agents/portfolio/: __init__.py  node.py  signature.py
examples/portfolio_analysis/agents/quant/: __init__.py  node.py  signature.py
examples/portfolio_analysis/agents/risk/: __init__.py  node.py  signature.py
examples/portfolio_analysis/shared/: models.py
examples/portfolio_analysis/specialists/compliance/: __init__.py  validators.py
examples/portfolio_analysis/specialists/portfolio/: __init__.py  models.py
examples/portfolio_analysis/specialists/quant/: __init__.py
examples/portfolio_analysis/specialists/risk/: __init__.py  models.py
examples/portfolio_analysis_message_driven/: README.md  __init__.py  main.py  messages.py  nodes.py  orchestrators.py  portfolio_flow.py
examples/portfolio_analysis_message_driven/specialists/quant/: node.py
examples/portfolio_analysis_message_driven/specialists/risk/: node.py
examples/rag/: README.md  main.py  pyproject.toml  rag_flows.py  utils.py
examples/rag_message_driven/: __init__.py  main.py  messages.py  nodes.py  rag_flows.py
examples/shared/: console_handler.py
examples/structured_output/: README.md  flow.py  main.py  models.py  nodes.py
issues/: correct_design_pattern.py  critique.md  reproduce_pydantic_bug.py
linters/: check-architecture-compliance.py  check-immutability.py  check-test-suite-compliance.py
scripts/: configure-mcpdoc.py  generate_llms_full.py  generate_llms_txt_files.py  run_mcp_server.py
tests/: conftest.py  conftest_message.py  test_callbacks.py  test_clearflow.py  test_error_handling.py  test_flow.py  test_immutability.py  test_message.py  test_message_flow.py  test_message_node.py  test_node.py  test_observe.py  test_observer.py  test_real_world_scenarios.py  test_type_transformations.py
typings/dspy/: __init__.pyi  __metadata__.pyi
typings/dspy/adapters/: __init__.pyi  baml_adapter.pyi  base.pyi  chat_adapter.pyi  json_adapter.pyi  two_step_adapter.pyi  utils.pyi  xml_adapter.pyi
typings/dspy/adapters/types/: __init__.pyi  audio.pyi  base_type.pyi  code.pyi  history.pyi  image.pyi  tool.pyi
typings/dspy/clients/: __init__.pyi  base_lm.pyi  cache.pyi  databricks.pyi  embedding.pyi  lm.pyi  lm_local.pyi  lm_local_arbor.pyi  openai.pyi  provider.pyi  utils_finetune.pyi
typings/dspy/datasets/: __init__.pyi  colors.pyi  dataloader.pyi  dataset.pyi  gsm8k.pyi  hotpotqa.pyi  math.pyi
typings/dspy/datasets/alfworld/: __init__.pyi  alfworld.pyi
typings/dspy/dsp/: colbertv2.pyi
typings/dspy/dsp/utils/: dpr.pyi  settings.pyi  utils.pyi
typings/dspy/evaluate/: __init__.pyi  auto_evaluation.pyi  evaluate.pyi  metrics.pyi
typings/dspy/predict/: __init__.pyi  aggregation.pyi  best_of_n.pyi  chain_of_thought.pyi  code_act.pyi  knn.pyi  multi_chain_comparison.pyi  parallel.pyi  predict.pyi  program_of_thought.pyi  react.pyi  refine.pyi
typings/dspy/predict/avatar/: avatar.pyi  models.pyi  signatures.pyi
typings/dspy/primitives/: __init__.pyi  base_module.pyi  example.pyi  module.pyi  prediction.pyi  python_interpreter.pyi
typings/dspy/propose/: __init__.pyi  dataset_summary_generator.pyi  grounded_proposer.pyi  propose_base.pyi  utils.pyi
typings/dspy/retrievers/: __init__.pyi  databricks_rm.pyi  embeddings.pyi  retrieve.pyi  weaviate_rm.pyi
typings/dspy/signatures/: __init__.pyi  field.pyi  signature.pyi  utils.pyi
typings/dspy/streaming/: __init__.pyi  messages.pyi  streamify.pyi  streaming_listener.pyi
typings/dspy/teleprompt/: __init__.pyi  avatar_optimizer.pyi  bettertogether.pyi  bootstrap.pyi  bootstrap_finetune.pyi  copro_optimizer.pyi  ensemble.pyi  grpo.pyi  infer_rules.pyi  knn_fewshot.pyi  mipro_optimizer_v2.pyi  random_search.pyi  signature_opt.pyi  simba.pyi  simba_utils.pyi  teleprompt.pyi  teleprompt_optuna.pyi  utils.pyi  vanilla.pyi
typings/dspy/teleprompt/gepa/: __init__.pyi  gepa.pyi  gepa_utils.pyi
typings/dspy/utils/: __init__.pyi  asyncify.pyi  caching.pyi  callback.pyi  dummies.pyi  exceptions.pyi  hasher.pyi  inspect_history.pyi  langchain_tool.pyi  logging_utils.pyi  mcp.pyi  parallelizer.pyi  saving.pyi  syncify.pyi  unbatchify.pyi  usage_tracker.pyi
typings/faiss/: __init__.pyi
