[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearflow-example-chat"
version = "0.1.0"
description = "Simple conversational flow example using ClearFlow and OpenAI"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.106.1",
    "python-dotenv>=1.1.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"