[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearflow-example-portfolio"
version = "0.1.0"
description = "Multi-specialist workflow example for financial portfolio analysis"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.3",
    "pydantic>=2.11.0",
    "rich>=13.7.1",  # Required by dspy 3.0.3
]

[tool.pyright]
venvPath = "."
venv = ".venv"