[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clearflow-example-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation example using ClearFlow"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.106.1",
    "faiss-cpu>=1.9.0.post2",
    "numpy>=2.3.2",
    "python-dotenv>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
exclude = ["**/.venv", "**/venv", "__pycache__"]